save fixed denominator for fractions fdo#56419

Change-Id: I612ff2340b272661067cb6a54106e91443fec91e