svl/inc/svl/zformat.hxx
@@ -289,6 +289,7 @@ public:
     // bString==true: first/last SYMBOLTYPE_STRING or SYMBOLTYPE_CURRENCY
     short GetNumForType( sal_uInt16 nNumFor, sal_uInt16 nPos, bool bString = false ) const;
 
+    sal_Int32 GetForcedDenominatorForType( sal_uInt16 nNumFor ) const;
     /** If the count of string elements (substrings, ignoring [modifiers] and
         so on) in a subformat code nNumFor (0..3) is equal to the given number.
         Used by ImpSvNumberInputScan::IsNumberFormatMain() to detect a matched
